<resources>
    <string name="app_name">BeMyPet</string>
    <string name="google_maps_key_debug" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCcSxPW1Brl5rCzq3R4XlA3i-_16xEa_Bo
    </string>
    <string name="google_maps_key_release" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCEgpbvu-QAxeTCJt6tIP5J2gYVi0Dvv_g
    </string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>
    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_mapa_pets_disponiveis">Map</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="nav_home">BeMyPet</string>
    <string name="nav_mensagens">Notificações / Mensagens</string>
    <string name="nav_meus_pets">Meus Pets / Favoritos</string>
    <string name="nav_sobre">Sobre</string>
    <string name="nav_ajuda">Ajuda</string>
    <string name="nav_sair">LogOut</string>
    <string name="denunciar">Sim, Denunciar!</string>
    <string name="desativar">Sim, Desativar!</string>
    <string name="ativar">Sim, Ativar!</string>
    <string name="cancelar">Cancelar</string>
    <string-array name="nav_item_activity_titles">
        <item>BeMyPet</item>
        <item>Notificações</item>
        <item>Lista de Pets</item>
        <item>Configurações</item>
        <item>Sobre</item>
    </string-array>
    <string name="activity_title_sobre">Sobre o BeMyPet</string>
    <string name="activity_title_privacy_policy">Termos de Adoção</string>
    <string name="activity_title_peril_pet">Perfil Pet</string>
    <string name="activity_title_visualizar_adocao">Solicitação de Adoção</string>
    <string name="activity_title_confirmar_solicitacao_adocao">Confirmar adoção!</string>
    <string name="activity_title_adocao_reprovada">Adoção Reprovada</string>
    <string name="activity_title_adocao_aprovada">Adoção Aprovada</string>
    <string name="activity_title_denuncia">Visualizar Denúncia</string>
    <string name="activity_title_denunciar">Denunciar Usuário</string>
    <string name="activity_title_peril_usuario">Perfil Usuário</string>
    <string name="action_clear_all">Limpar</string>
    <string name="action_filtro">Filtros</string>
    <string name="action_novo_pet">Novo Pet</string>
    <string name="action_mark_all_read">Marcar todos como lido</string>
    <string name="privacy_policy">Políticas de Adoção</string>
    <string name="activity_title_cadastro_usuario">Cadastro Usuário</string>
    <string name="activity_title_cadastro_pet">Cadastro Pet</string>
    <string name="activity_title_cadastro_adocao">Cadastro Adoção</string>
    <string name="required_field">Este campo é obrigatório</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="denuncia_maus_tratos">Denúncia por maus tratos</string>
    <string name="denuncia_conteudo_improprio">Denúncia por conteúdo impróprio</string>
    <string name="raca_prompt">Escolha uma raça</string>
    <string name="cao">Cão</string>
    <string name="gato">Gato</string>
    <string name="outros">Outros</string>
    <string name="macho">Macho</string>
    <string name="femea">Fêmea</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="sociavelPessoas">Pessoas</string>
    <string name="sociavelCaes">Cães</string>
    <string name="sociavelGatos">Gatos</string>
    <string name="temperamentoBravo">Bravo</string>
    <string name="temperamentoComCuidado">Pouco sociável</string>
    <string name="temperamentoConviveBem">Convive Bem</string>
    <string name="temperamentoMuitoDocil">Muito Dócil</string>
    <string name="naoSeiDataNascimento">Não sei informar a data de nascimento</string>
    <string name="especieTitulo">Espécie</string>
    <string name="sexoTitulo">Sexo</string>
    <string name="racaTitulo">Raça</string>
    <string name="idadeTitulo">Idade</string>
    <string name="pesoTitulo">Peso (KG)</string>
    <string name="castradoTitulo">Castrado</string>
    <string name="vermifugadoTitulo">Vermifugado</string>
    <string name="sociavelTitulo">Sociável</string>
    <string name="temperamentoTitulo">Temperamento</string>
    <string name="raioDeBuscaTitulo">Raio de Busca (área em KM para delimitar a busca)</string>
    <string name="raioDeBusca">Raio de Busca (área em KM para delimitar a busca)</string>
    <string name="pesoAproximado">Peso Aproximado:</string>
    <string name="idadeAproximada">Idade Aproximada:</string>
    <string-array name="raca_array">
        <item>Qualquer</item>
        <item>SRD (Sem Raça Definida)</item>
        <item>Chow Chow</item>
        <item>Shitsu</item>
        <item>Golden Retrivier</item>
        <item>Persa</item>
        <item>Egipcio</item>
        <item>Siamês</item>
    </string-array>
    <string-array name="raca_cao">
        <item>Qualquer</item>
        <item>SRD (Sem Raça Definida)</item>
        <item>Shih Tzu</item>
        <item>Yorkshire Terrier</item>
        <item>Poodle</item>
        <item>Lhasa Apso</item>
        <item>Buldogue Francês</item>
        <item>Maltês</item>
        <item>Golden Retriever</item>
        <item>Labrador</item>
        <item>Pug</item>
        <item>Dachshund</item>
        <item>Spitz Alemão</item>
        <item>Pinscher</item>
        <item>Schnauzer</item>
        <item>Beagle</item>
        <item>Cocker Spaniel</item>
        <item>Border Collie</item>
        <item>Buldogue Inglês</item>
        <item>American Pitbull</item>
        <item>Chow Chow</item>
    </string-array>
    <string-array name="raca_gato">
        <item>Qualquer</item>
        <item>SRD (Sem Raça Definida)</item>
        <item>Persa</item>
        <item>Himalaia</item>
        <item>Siamês</item>
        <item>Maine Coon</item>
        <item>Angorá</item>
        <item>Sphynx</item>
        <item>Ragdoll</item>
        <item>Ashera</item>
        <item>American Shorthair</item>
        <item>Siberiano</item>
        <item>Egípcio</item>
    </string-array>
    <string-array name="raca_outro">
        <item>Outro</item>
    </string-array>
    <string name="title_activity_perfil_pet_scrolling">PerfilPetScrollingActivity</string>
    <string name="nome">Nome *</string>
    <string name="nome_pet_placeholder">Informe o nome do pet</string>
    <string name="txtNaoSei">
        <![CDATA[
        O campo <b>"NÃO SEI" </b> pode ser usado quando o pet ainda é muito novo, e você ainda não sabe identificar o sexo dele.
        Sugerimos que visite o veterinário para verificar essa informação e, quando souber, volte para atualizá-la!
        ]]>
    </string>
    <string name="dataNascimento">Data de Nascimento * </string>
    <string name="data_placeholder">00/00/0000</string>
    <string name="cpf">CPF *</string>
    <string name="cpf_placeholder">CPF (somente número)</string>
    <string name="telefone">Telefone *</string>
    <string name="telefone_placeholder">Telefone com DDD</string>
    <string name="email">E-mail</string>
    <string name="email_placeholder">Informe seu E-mail</string>
    <string name="foto">Foto *</string>
    <string name="casa">Casa</string>
    <string name="apartamento">Apartamento</string>
    <string name="txtMoraAptoCasa">VOCÊ MORA EM CASA OU APARTAMENTO</string>
    <string name="txtCasaPatio">CASA - POSSUI PATIO?</string>
    <string name="txtCuidadoPestes">TOMA CUIDADOS CONTRA PESTES?</string>
    <string name="txtGradeProtecao">TEM TELAS/GRADES DE PROTEÇÃO?</string>
    <string name="inforAdicional">Informações Adicionais</string>
    <string name="txtCadastroAdocaoCuidadoPestes">Os cuidados contra pestes incluem controle de pulgas, carrapatos, entrada de animais de rua, plantas venenosas e quaisquer elementos que podem oferecer perigo ao pet.</string>
    <string name="txtCadastroAdocaoInfoPreenchimento">Preencha com qualquer informação que julgue necessária. Desde informações sobre condições da sua casa ou apartamento, presença de crianças pequenas ou idosos, qual seu propósito para adotar um novo companheiro, entre outras.</string>
    <string name="txtTituloNovoPet1">Preencha o formulário abaixo para realizar o cadastro do pet que você quer colocar para adoção!</string>
    <string name="naoSei">Não Sei</string>
    <string name="txtNaoSeiDataNascimento">Se o pet faz parte de uma ninhada que está para nascer, coloque uma data aproximada para o nascimento. Sugerimos que, assim que a ninhada nascer e, se for necessário, volte para atualizá-la!</string>
    <string name="petCastradoTitulo">O pet foi castrado?</string>
    <string name="petVermifugadoTitulo">o pet já foi vermifugado?</string>
    <string name="primeiradose">1ª dose</string>
    <string name="segundadose">2ª dose</string>
</resources>