<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/OrangeApp" />

    <!--TODO descomentar ninhada na proxima versao-->
    <!--&lt;!&ndash;ninhada&ndash;&gt;-->
    <!--<LinearLayout style="@style/layoutLinha">-->
        <!--<TextView-->
            <!--style="@style/textoFormulario"-->
            <!--android:text="@string/fazParteNinhada"/>-->
    <!--</LinearLayout>-->

    <!--<LinearLayout style="@style/layoutLinha">-->

        <!--<RadioGroup-->
            <!--android:id="@+id/radioParteNinhada"-->
            <!--style="@style/radioGroupFormulario"-->
            <!--android:layout_weight="3"-->
            <!--android:weightSum="3">-->

            <!--<RadioButton-->
                <!--android:id="@+id/radioSim"-->
                <!--android:text="@string/sim"-->
                <!--android:checked="true"-->
                <!--style="@style/radioButtonFormulario"-->
                <!--android:layout_weight="1"/>-->

            <!--<RadioButton-->
                <!--android:id="@+id/radioNao"-->
                <!--android:text="@string/nao"-->
                <!--style="@style/radioButtonFormulario"-->
                <!--android:layout_weight="1"/>-->

        <!--</RadioGroup>-->

    <!--</LinearLayout>-->

    <!--&lt;!&ndash;nome ninhada&ndash;&gt;-->
    <!--<LinearLayout style="@style/layoutLinha">-->
        <!--<TextView-->
            <!--style="@style/textoFormulario"-->
            <!--android:text="@string/nomeNinhada"/>-->
    <!--</LinearLayout>-->
    <!--<LinearLayout style="@style/layoutLinha">-->
        <!--<EditText-->
            <!--android:id="@+id/edtNomeNinhada"-->
            <!--style="@style/inputFormularioPet"-->
            <!--android:hint="@string/ninhada_placeholder"/>-->
    <!--</LinearLayout>-->


    <!--castrado-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/petCastradoTitulo"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha">

        <RadioGroup
            android:id="@+id/radioGroupCastrado"
            style="@style/radioGroupFormulario"
            android:layout_weight="2"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioCastradoSim"
                android:text="@string/sim"
                android:checked="true"
                style="@style/radioButtonFormulario"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/radioCastradoNao"
                android:text="@string/nao"
                style="@style/radioButtonFormulario"
                android:layout_weight="1"/>
        </RadioGroup>

    </LinearLayout>


    <!--vermifugado-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/petVermifugadoTitulo"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha">

        <RadioGroup
            android:id="@+id/radioGroupVermifugado"
            style="@style/radioGroupFormulario"
            android:layout_weight="2"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radioVermifugadoSim"
                android:text="@string/sim"
                android:checked="true"
                style="@style/radioButtonFormulario"
                android:layout_weight="1"/>

            <RadioButton
                android:id="@+id/radioVermifugadoNao"
                android:text="@string/nao"
                style="@style/radioButtonFormulario"
                android:layout_weight="1"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout style="@style/layoutLinha">
        <LinearLayout style="@style/colunasFormulario">
            <CheckBox android:id="@+id/chk_primeira_dose"
                android:text="@string/primeiradose"
                style="@style/checkBoxFormulario"
                android:layout_weight="2"/>

            <CheckBox android:id="@+id/chk_segunda_dose"
                android:text="@string/segundadose"
                style="@style/checkBoxFormulario"
                android:layout_weight="2"/>
        </LinearLayout>
    </LinearLayout>

    <!--campos para sociavel e temperamento-->
    <LinearLayout style="@style/layoutLinha">

        <LinearLayout style="@style/colunaComCheckbox">

            <TextView
                style="@style/textoFormulario"
                android:text="@string/sociavelTitulo"/>

            <CheckBox android:id="@+id/chk_sociavel_pessoas"
                android:text="@string/sociavelPessoas"
                style="@style/checkBoxFormulario"
                android:layout_weight="1"/>

            <CheckBox android:id="@+id/chk_sociavel_caes"
                android:text="@string/sociavelCaes"
                style="@style/checkBoxFormulario"
                android:layout_weight="1"/>

            <CheckBox android:id="@+id/chk_sociavel_gatos"
                android:text="@string/sociavelGatos"
                style="@style/checkBoxFormulario"
                android:layout_weight="1"/>

            <CheckBox android:id="@+id/chk_sociavel_outros"
                android:text="@string/outros"
                style="@style/checkBoxFormulario"
                android:layout_weight="1"/>

        </LinearLayout>


    </LinearLayout>

    <!--campos para sociavel e temperamento-->
    <LinearLayout style="@style/layoutLinha">

        <LinearLayout
            style="@style/colunaComCheckbox">

            <TextView
                style="@style/textoFormulario"
                android:text="@string/temperamentoTitulo"/>

            <RadioGroup
                android:id="@+id/radioGroupTemperamento"
                style="@style/radioGroupFormulario"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioTemperamentoBravo"
                    android:text="@string/temperamentoBravo"
                    android:checked="true"
                    style="@style/radioButtonFormulario" />

                <RadioButton
                    android:id="@+id/radioTemperamentoComCuidado"
                    android:text="@string/temperamentoComCuidado"
                    style="@style/radioButtonFormulario" />

                <RadioButton
                    android:id="@+id/radioTemperamentoConviveBem"
                    android:text="@string/temperamentoConviveBem"
                    style="@style/radioButtonFormulario" />

                <RadioButton
                    android:id="@+id/radioTemperamentoMuitoDocil"
                    android:text="@string/temperamentoMuitoDocil"
                    style="@style/radioButtonFormulario" />
            </RadioGroup>


        </LinearLayout>

    </LinearLayout>


</LinearLayout>