<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/OrangeApp"
        />

    <!--nome-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/nome"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha">
        <EditText
            android:id="@+id/edtNomeUsuario"
            style="@style/inputFormulario"
            android:hint="@string/nome"
            />
    </LinearLayout>


    <!--foto-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/foto"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha"
        android:id="@+id/usuarioImgLayout">

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@drawable/bg_circle"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:elevation="2dp"
                android:src="@drawable/add_photo"
                android:onClick="buscaFotoPerfil"
                android:layout_toRightOf="@+id/user_profile_photo"
                android:layout_marginLeft="-40dp"/>

        </RelativeLayout>
    </LinearLayout>

    <!--data nascimento-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/dataNascimento"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha">
        <TextView
            android:id="@+id/edtDataNascimento"
            style="@style/inputFormulario"
            android:hint="@string/data_placeholder"
            android:drawableRight="@drawable/calendar"/>
    </LinearLayout>



    <!--cpf-->
    <LinearLayout style="@style/layoutLinha">
        <TextView
            style="@style/textoFormulario"
            android:text="@string/cpf"/>
    </LinearLayout>
    <LinearLayout style="@style/layoutLinha">
        <EditText
            android:id="@+id/edtCpf"
            android:inputType="number"
            style="@style/inputFormulario"
            android:hint="@string/cpf_placeholder"/>
    </LinearLayout>




</LinearLayout>